nav bar concluida

--- a/index.html
+++ b/index.html
@@ -4,10 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Desafio</title>
   </head>
   <body>
-    <nav></nav>
+    <header>
+      <nav id="nav">
+        <div id="esquerda">
+          <img src="assets/worldwide 1 (Traced).png" />
+          <p>OptimusTech</p>
+        </div>
+        <div id="meio">
+          <span><a href="#">Home</a></span>
+          <span><a href="#">Produtos</a></span>
+          <span><a href="#">Recursos</a></span>
+          <span><a href="#">Sobre nós</a></span>
+        </div>
+        <div id="direita">
+          <span id="entrar"><a href="#">Entrar</a></span>
+          <span id="cadastrar"><a href="#">Cadastrar</a></span>
+        </div>
+      </nav>
+    </header>
     <main></main>
   </body>
   <footer></footer>
