--- a/index.html
+++ b/index.html
@@ -33,7 +33,17 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <div id="cabecalho">
+        <p id="vermelho">Sobre nós</p>
+        <h1>Por que somos diferentes?</h1>
+        <p id="cinza-claro">
+          Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as
+          empresas de todo o mundo a se concentrarem naquilo que é realmente
+          importante para elas.
+        </p>
+      </div>
+    </main>
   </body>
   <footer></footer>
 </html>
