--- a/index.html
+++ b/index.html
@@ -35,13 +35,50 @@
     </header>
     <main>
       <div id="cabecalho">
-        <p id="vermelho">Sobre nós</p>
+        <p class="vermelho">Sobre nós</p>
         <h1>Por que somos diferentes?</h1>
-        <p id="cinza-claro">
+        <p class="cinza-claro">
           Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as
           empresas de todo o mundo a se concentrarem naquilo que é realmente
           importante para elas.
         </p>
+      </div>
+
+      <div id="metricas">
+        <div class="quad-met">
+          <h1 class="vermelho">400+</h1>
+          <p class="parag-met">Projetos concluídos</p>
+          <p class="cinza-claro">
+            Nós ajudamos a construir mais de 400 projetos incríveis.
+          </p>
+        </div>
+
+        <div class="quad-met">
+          <h1 class="vermelho">100+</h1>
+          <p class="parag-met">Colaboradores</p>
+          <p class="cinza-claro">
+            Temos mais de 100 colaboradores no nosso time que se preocupam com
+            nossos clientes.
+          </p>
+        </div>
+
+        <div class="quad-met">
+          <h1 class="vermelho">20k</h1>
+          <p class="parag-met">Downloads</p>
+          <p class="cinza-claro">
+            Nossos projetos que estão disponíveis em lojas já foram baixados
+            mais de 20.000 vezes.
+          </p>
+        </div>
+
+        <div class="quad-met" id="borda-met">
+          <h1 class="vermelho">500+</h1>
+          <p class="parag-met">Reviews 5 estrelas</p>
+          <p class="cinza-claro">
+            Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em
+            nossos produtos.
+          </p>
+        </div>
       </div>
     </main>
   </body>
