--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
           </p>
         </div>
       </div>
+
+      <div id="vagas">
+        <p class="vermelho">Vagas abertas!</p>
+        <p class="parag-met">Estamos procurando por talentos</p>
+        <p class="cinza-claro">
+          Somos uma equipe 100% remota com pessoas do Brasil inteiro.
+        </p>
+        <img src="assets/Image.png" />
+      </div>
     </main>
   </body>
   <footer></footer>
