vagas abertas finalizadas

--- a/index.html
+++ b/index.html
@@ -89,6 +89,44 @@
         </p>
         <img src="assets/Image.png" />
       </div>
+
+      <div id="vagas-abertas">
+        <div class="quad-vagas">
+          <h3>Design</h3>
+          <div class="quad-vagas-ind">
+            <h3>Product Designer</h3>
+            <p class="cinza-claro">Full-time</p>
+            <p class="cinza-claro">Faixa salarial: R$7.000</p>
+          </div>
+
+          <div class="quad-vagas-ind">
+            <h3>UX Designer</h3>
+            <p class="cinza-claro">Full-time</p>
+            <p class="cinza-claro">Faixa salarial: R$6.000</p>
+          </div>
+        </div>
+
+        <div class="quad-vagas">
+          <h3>Desenvolvimento de Software</h3>
+          <div class="quad-vagas-ind">
+            <h3>Desenvolvedor(a) IOS</h3>
+            <p class="cinza-claro">Full-time</p>
+            <p class="cinza-claro">Faixa salarial: R$8.000</p>
+          </div>
+
+          <div class="quad-vagas-ind">
+            <h3>Desenvolvedor(a) Front-end</h3>
+            <p class="cinza-claro">Full-time</p>
+            <p class="cinza-claro">Faixa salarial: R$7.000</p>
+          </div>
+
+          <div class="quad-vagas-ind">
+            <h3>Desenvolvedor(a) Back-end</h3>
+            <p class="cinza-claro">Full-time</p>
+            <p class="cinza-claro">Faixa salarial: R$8.000</p>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
   <footer></footer>
