--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           <span><a href="#">Sobre nós</a></span>
         </div>
         <div id="direita">
-          <span id="entrar"><a href="#">Entrar</a></span>
-          <span id="cadastrar"><a href="#">Cadastrar</a></span>
+          <button id="entrar">Entrar</button>
+          <button id="cadastrar">Cadastrar</button>
         </div>
       </nav>
     </header>
@@ -127,7 +127,24 @@
           </div>
         </div>
       </div>
+
+      <div id="depoimentos">
+        <p class="vermelho">Veja o que nossos colaboradores falam sobre nós</p>
+        <h1>
+          OptimusTech se importa com a saúde dos seus colaboradores e sempre
+          procura nos dar todo tipo de auxílio possível.
+        </h1>
+        <img src="assets/Avatar.jpg" />
+        <p id="p-dep">Júlia Castro</p>
+        <p class="cinza-claro">Desenvolvedora Web</p>
+      </div>
     </main>
   </body>
-  <footer></footer>
+  <footer>
+    <h1>Acompanhe as nossas oportunidades</h1>
+    <p class="cinza-claro">Seja o primeiro a saber quando novas vagas serão abertas!</p>
+    <input type="email" id="email" placeholder="Seu e-mail"></input>
+    <button type="button">Cadastrar</button>
+    <p id="direitos">© 2022 OptimusTech. Todos os direitos reservados.</p>
+  </footer>
 </html>
